Solved menu class problem

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -30,9 +30,11 @@ transform: rotate(0deg) scale(1) skew(1deg) translate(0px);
 -ms-transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
 }
 
-.menu-top {
+.menu-top, .menu-top #menuContainer {
   margin-top: 0 !important;
 }
+
+
 
 /* .embed-* is from bootstrap, for responsive videos */
 .embed-responsive {
