--- a/templates/template-contact.html
+++ b/templates/template-contact.html
@@ -1,16 +1,18 @@
-<div style="padding-top: 60px">
-    <hr>
+<div style="padding-top: 100px">
+    
     <div class="container">
-        <hr class="featurette-divider">
+        
         <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">Enplater Torroella <span class="text-muted">de montgrí</span></h2>
               <p class="lead">{{content}}</p>
             </div>
             <div class="col-md-5">
-                <ui-gmap-google-map center='map1.center' zoom='map1.zoom'>
-                    <ui-gmap-marker idKey="1" coords="map1.mark"></ui-gmap-marker>
-                </ui-gmap-google-map>
+                <p class="lead">
+                    <ui-gmap-google-map center='map1.center' zoom='map1.zoom'>
+                        <ui-gmap-marker idKey="1" coords="map1.mark"></ui-gmap-marker>
+                    </ui-gmap-google-map>
+                </p>
             </div>
         </div>
         
