--- a/templates/menu-template.html
+++ b/templates/menu-template.html
@@ -3,23 +3,23 @@
         <nav class="navbar navbar-default" style="transition: margin-top 0.5s, background-color 0.5s, width 1s">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> 
+                    <button id="collapseButton" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> 
                         <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
                     </button>
                     <!--a class="navbar-brand" href="#"><img style="width: 62px;" src="img/logoEnplater.png"></img></a--> 
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" >
-                        <li ng-repeat="menuItem in menus"><a ng-click="changeItem()" ui-sref="app.{{language}}.{{menuItem.link}}" href="">{{menuItem.label}}</a></li>
+                        <li ng-repeat="menuItem in menus"><a ng-click="changeItem()" data-toggle="collapse" data-target=".navbar-collapse.in" ui-sref="app.{{language}}.{{menuItem.link}}" href="">{{menuItem.label}}</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
                           <a class="dropdown-toggle" role="button" aria-expanded="false" href="#" data-toggle="dropdown"> <img src="img/{{language}}.png" alt=""> {{translates.language[language]}} <span class="caret"></span></a>
                           <ul class="dropdown-menu" role="menu">
-                            <li><a ng-click="changeLanguage('ca')">{{translates.languages[language].ca}}</a></li>  
-                            <li><a ng-click="changeLanguage('es')">{{translates.languages[language].es}}</a></li>
-                            <li><a ng-click="changeLanguage('en')">{{translates.languages[language].en}}</a></li>
-                            <li><a ng-click="changeLanguage('fr')">{{translates.languages[language].fr}}</a></li>
+                            <li><a ng-click="changeLanguage('ca')" data-toggle="collapse" data-target=".navbar-collapse.in">{{translates.languages[language].ca}}</a></li>  
+                            <li><a ng-click="changeLanguage('es')" data-toggle="collapse" data-target=".navbar-collapse.in">{{translates.languages[language].es}}</a></li>
+                            <li><a ng-click="changeLanguage('en')" data-toggle="collapse" data-target=".navbar-collapse.in">{{translates.languages[language].en}}</a></li>
+                            <li><a ng-click="changeLanguage('fr')" data-toggle="collapse" data-target=".navbar-collapse.in">{{translates.languages[language].fr}}</a></li>
                           </ul>
                         </li>
                     </ul>
